fix: bottom page elements are too close to the browser window edge

--- a/src/pages/decks/page.module.scss
+++ b/src/pages/decks/page.module.scss
@@ -19,6 +19,7 @@
   @include flex-container-row(center, space-between);
 
   padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .progress {
@@ -32,10 +33,6 @@
 
   flex-wrap: wrap;
   gap: 20px 20px;
-
-  // display: 'flex',
-  // alignItems: 'flex-start',
-  // justifyContent: 'space-between',
 }
 
 .cardsCountSliderWrapper {
